# mem-alloc

./: .gitignore  BENCHMARK.md  CMakeLists.txt  README.md  a.out  benchmark  log.md  main  main.c  makefile  tasks.md
include/: main.h  mem.h  test.h
src/: benchmark.c  main.c  mem.c  test.c  test_threads.c
